testsuite/tests/properties/invalid_call/test.out
== bad_arg_type/test.lkt ==
test.lkt:4:52: error: Expected type Int, got FooNode
4 |     @exported fun bar_prop(): Int = node.root_prop(null[FooNode])
  |                                                    ^^^^^^^^^^^^^


== correct/test.lkt ==
Code generation was successful

== field/test.lkt ==
test.lkt:6:48: error: cannot call a field
6 |     @ignored fun p(): Array[LogicVar] = [node.v()]
  |                                                ^^


== kwargs_before_args/test.lkt ==
test.lkt:4:62: error: positional arguments are forbidden after the first keyword argument
4 |     @exported fun bar_prop(): Int = node.many_args(a=1, b=2, 3)
  |                                                              ^


== no_such_prop/test.lkt ==
test.lkt:4:42: error: Type BarNode has no 'no_such_prop' field or property
4 |     @exported fun bar_prop(): Int = node.no_such_prop(12)
  |                                          ^^^^^^^^^^^^


== not_a_call/test.lkt ==
test.lkt:6:35: error: call syntax is mandatory for properties
6 |     @exported fun p(): Int = node.get_int
  |                                   ^^^^^^^


== property_annot/test.lkt ==
test.lkt:6:42: error: argument list forbidden with @property
6 |     @exported fun p(): Int = node.get_int()
  |                                          ^^


== property_valid/test.lkt ==
Code generation was successful

== property_with_args/test.lkt ==
test.lkt:4:5: error: the @property annotation is valid only for properties with no argument
4 |     @property fun plus_one(i: Int): Int = i + 1
  |     ^^^^^^^^^


== too_many_args/test.lkt ==
test.lkt:4:56: error: Unexpected argument
4 |     @exported fun bar_prop(): Int = node.root_prop(12, 15)
  |                                                        ^^


lkt_compile: Done
